ui tweaks + stuff

--- a/projects.html
+++ b/projects.html
@@ -14,13 +14,13 @@
   <div class="blurBox">
     <div class="horizontalLayout">
       <div class="mainTitle">P</div>
-      <div class="mainTitle">R</div>
-      <div class="mainTitle">O</div>
-      <div class="mainTitle">J</div>
-      <div class="mainTitle">E</div>
-      <div class="mainTitle">C</div>
-      <div class="mainTitle">T</div>
-      <div class="mainTitle">S</div>
+      <div class="mainTitle" style="animation: riseLoad 2s ease 0s 1 normal backwards;">R</div>
+      <div class="mainTitle" style="animation: riseLoad 2.3s ease 0s 1 normal backwards;">O</div>
+      <div class="mainTitle" style="animation: riseLoad 2.6s ease 0s 1 normal backwards;">J</div>
+      <div class="mainTitle" style="animation: riseLoad 2.9s ease 0s 1 normal backwards;">E</div>
+      <div class="mainTitle" style="animation: riseLoad 3.2s ease 0s 1 normal backwards;">C</div>
+      <div class="mainTitle" style="animation: riseLoad 3.5s ease 0s 1 normal backwards;">T</div>
+      <div class="mainTitle" style="animation: riseLoad 3.8s ease 0s 1 normal backwards;">S</div>
     </div>
 
     <div class="bullet" onclick="location.href='index.html'">home</div>
@@ -29,90 +29,102 @@
       <!-- clickity calculator -->
       <div class="verticalLayout projectLayout">
         <img class="projectIMG" src="images/calculator.png">
-        <div class="projectTitle">clickity calculator</div>
-        <div class="projectDetail">a basic calculator (school group project), (I have implemented a better version of
-          this in fuseLearn)</div>
+        <div class="projectTitle" style="font-size: calc(1vh + 1vw);">clickity calculator</div>
+        <div class="projectDetail">a basic calculator</div>
         <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Clickity-Calculator'">
           <img class="buttonIMG" src="images/replit.png">Replit
         </button>
         <button class="basic" onclick="location.href='replit/Calculator/index.html'">
           <img class="buttonIMG" src="images/play.png">run
         </button>
+        <div class="postDetail">school group project</div>
+        <div class="postDetail">implemented better in fuseLearn</div>
       </div>
 
       <!-- jeopardy -->
       <div class="verticalLayout projectLayout">
         <img class="projectIMG" src="images/money.png">
         <div class="projectTitle">jeopardy</div>
-        <div class="projectDetail">jeopardy game (school group project)</div>
+        <div class="projectDetail">jeopardy game</div>
         <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Jeopardy?v=1'">
           <img class="buttonIMG" src="images/replit.png">Replit
         </button>
         <button class="basic" onclick="location.href='replit/Jeopardy/index.html'">
           <img class="buttonIMG" src="images/play.png">run
         </button>
+        <div class="postDetail">school group project</div>
       </div>
 
       <!-- cut the steak -->
       <div class="verticalLayout projectLayout">
         <img class="projectIMG" src="images/steak.png">
         <div class="projectTitle">cut the steak</div>
-        <div class="projectDetail">cooking game (school group project)</div>
+        <div class="projectDetail">cooking game</div>
         <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Lets-Cut-the-Steak'">
           <img class="buttonIMG" src="images/replit.png">Replit
         </button>
         <button class="basic" onclick="location.href='replit/Steak/index.html'">
           <img class="buttonIMG" src="images/play.png">run
         </button>
+        <div class="postDetail">school group project</div>
       </div>
 
       <!-- Tesla website -->
       <div class="verticalLayout projectLayout">
         <img class="projectIMG" src="images/car.png">
         <div class="projectTitle">Tesla website</div>
-        <div class="projectDetail">Tesla website copy (school group project)</div>
+        <div class="projectDetail">Tesla website copy</div>
         <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Tesla-Website?v=1'">
           <img class="buttonIMG" src="images/replit.png">Replit
         </button>
         <button class="basic" onclick="location.href='replit/Tesla/index.html'">
           <img class="buttonIMG" src="images/play.png">run
         </button>
+        <div class="postDetail">school group project</div>
       </div>
 
       <!-- to-do -->
       <div class="verticalLayout projectLayout">
         <img class="projectIMG" src="images/tasks.png">
         <div class="projectTitle">to-do</div>
-        <div class="projectDetail">to-do task website (school group project), (I have implemented a better version of
-          this in fuseLearn)</div>
+        <div class="projectDetail">to-do task website</div>
         <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Tesla-Website?v=1'">
           <img class="buttonIMG" src="images/replit.png">Replit
         </button>
         <button class="basic" onclick="location.href='replit/Tesla/index.html'">
           <img class="buttonIMG" src="images/play.png">run
         </button>
+        <div class="postDetail">school group project</div>
+        <div class="postDetail">implemented better in fuseLearn</div>
       </div>
 
       <!-- fuseLearn -->
       <div class="verticalLayout projectLayout">
         <img class="projectIMG" src="images/broken-robot.png">
         <div class="projectTitle">fuseLearn</div>
-        <div class="projectDetail">hackathon project, learning hub full of tools</div>
+        <div class="projectDetail">learning hub full of tools</div>
         <button class="basic" onclick="location.href='https://foresthacks.devpost.com'">
           <img class="buttonIMG" src="images/link.png">hackathon
         </button>
         <button class="basic" onclick="location.href='hackathons/fuseLearn/home/fuseLearn.html'">
           <img class="buttonIMG" src="images/play.png">run
         </button>
+        <div class="postDetail">hackathon project</div>
       </div>
 
       <!-- misc -->
-      <div class="verticalLayout projectLayout">
+      <div class="verticalLayout projectLayout" style="outline: solid white;">
         <img class="projectIMG" src="images/more.png">
         <div class="projectTitle">more</div>
-        <div class="projectDetail">a bunch of misc projects can be found on my Github</div>
+        <div class="projectDetail">misc. projects</div>
         <button class="github" onclick="location.href='https://github.com/rishaank'">
           <img class="buttonIMG" src="images/github-icon.png">Github
+        </button>
+        <button class="replit" onclick="location.href='https://replit.com/@RishaanKotian/'">
+          <img class="buttonIMG" src="images/replit.png">Rishaan Replit
+        </button>
+        <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/'">
+          <img class="buttonIMG" src="images/replit.png">James Replit
         </button>
       </div>
     </div>
