--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
       </div>
 
       <!-- jeopardy -->
-      <div class="verticalLayout projectLayout">
+      <div class="verticalLayout projectLayout" style="animation: riseLoad 2s ease 0s 1 normal backwards;">
         <img class="projectIMG" src="images/money.png">
         <div class="projectTitle">jeopardy</div>
         <div class="projectDetail">jeopardy game</div>
@@ -56,7 +56,7 @@
       </div>
 
       <!-- cut the steak -->
-      <div class="verticalLayout projectLayout">
+      <div class="verticalLayout projectLayout" style="animation: riseLoad 3s ease 0s 1 normal backwards;">
         <img class="projectIMG" src="images/steak.png">
         <div class="projectTitle">cut the steak</div>
         <div class="projectDetail">cooking game</div>
@@ -70,7 +70,7 @@
       </div>
 
       <!-- Tesla website -->
-      <div class="verticalLayout projectLayout">
+      <div class="verticalLayout projectLayout" style="animation: riseLoad 4s ease 0s 1 normal backwards;">
         <img class="projectIMG" src="images/car.png">
         <div class="projectTitle">Tesla website</div>
         <div class="projectDetail">Tesla website copy</div>
@@ -84,7 +84,7 @@
       </div>
 
       <!-- to-do -->
-      <div class="verticalLayout projectLayout">
+      <div class="verticalLayout projectLayout" style="animation: riseLoad 5s ease 0s 1 normal backwards;">
         <img class="projectIMG" src="images/tasks.png">
         <div class="projectTitle">to-do</div>
         <div class="projectDetail">to-do task website</div>
@@ -99,7 +99,7 @@
       </div>
 
       <!-- fuseLearn -->
-      <div class="verticalLayout projectLayout">
+      <div class="verticalLayout projectLayout" style="animation: riseLoad 6s ease 0s 1 normal backwards;">
         <img class="projectIMG" src="images/broken-robot.png">
         <div class="projectTitle">fuseLearn</div>
         <div class="projectDetail">learning hub full of tools</div>
@@ -113,18 +113,19 @@
       </div>
 
       <!-- misc -->
-      <div class="verticalLayout projectLayout" style="outline: solid white;">
+      <div class="verticalLayout projectLayout"
+        style="outline: solid white; animation: riseLoad 7s ease 0s 1 normal backwards;">
         <img class="projectIMG" src="images/more.png">
         <div class="projectTitle">more</div>
         <div class="projectDetail">misc. projects</div>
-        <button class="github" onclick="location.href='https://github.com/rishaank'">
-          <img class="buttonIMG" src="images/github-icon.png">Github
-        </button>
         <button class="replit" onclick="location.href='https://replit.com/@RishaanKotian/'">
           <img class="buttonIMG" src="images/replit.png">Rishaan Replit
         </button>
         <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/'">
           <img class="buttonIMG" src="images/replit.png">James Replit
+        </button>
+        <button class="github" onclick="location.href='https://github.com/rishaank'">
+          <img class="buttonIMG" src="images/github-icon.png">Github
         </button>
       </div>
     </div>
