--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div class="horizontalLayout">
       <div class="bullet" onclick="location.href='projects.html'">projects</div>
-      <div class="bullet">•</div>
+      <div class="blankBullet">•</div>
       <div class="bullet">about (coming soon)</div>
     </div>
   </div>
