portfolio and fuseLearn ui tweaks

--- a/hackathons/fuseLearn/home/fuseLearn.html
+++ b/hackathons/fuseLearn/home/fuseLearn.html
@@ -11,27 +11,51 @@
 <body>
     <img class="bgIMG" src="../images/mountainBG.jpg">
     <div class="blurBox onTop" style="width: 68.75vw; height: 68.75vh; right: 0; top: 0;">
-        <div class="title horizontalCenter" style="width: 68.75vw;">fuseLearn Hub</div>
+        <div class="horizontalLayout" style="column-gap: 0;">
+            <div class="title">f</div>
+            <div class="title" style="animation: riseLoad 2s ease 0s 1 normal backwards;">u</div>
+            <div class="title" style="animation: riseLoad 3s ease 0s 1 normal backwards;">s</div>
+            <div class="title" style="animation: riseLoad 4s ease 0s 1 normal backwards;">e</div>
+            <div class="title" style="animation: riseLoad 4.25s ease 0s 1 normal backwards;">L</div>
+            <div class="title" style="animation: riseLoad 4.5s ease 0s 1 normal backwards;">e</div>
+            <div class="title" style="animation: riseLoad 4.75s ease 0s 1 normal backwards;">a</div>
+            <div class="title" style="animation: riseLoad 5s ease 0s 1 normal backwards;">r</div>
+            <div class="title" style="animation: riseLoad 5.25s ease 0s 1 normal backwards; margin-right: 15px;">
+                n</div>
+            <div class="title" style="animation: riseLoad 2s ease 0s 1 normal backwards;">H</div>
+            <div class="title" style="animation: riseLoad 3s ease 0s 1 normal backwards;">u</div>
+            <div class="title" style="animation: riseLoad 4s ease 0s 1 normal backwards;">b</div>
+        </div>
         <div class="horizontalLayout">
             <button class="bigCentered" onclick="location.href='../tasks/tasks.html'">Tasks
-                <img class="buttonIMG" src="../images/tasks.png"></img>
+                <img class="buttonIMG" style="animation: riseLoad 2s ease 0s 1 normal backwards;"
+                    src="../images/tasks.png"></img>
             </button>
-            <button class="bigCentered" onclick="location.href='../notepad/notepad.html'">Notepad
-                <img class="buttonIMG" src="../images/notepad.png"></img>
+            <button class="bigCentered" style="animation: riseLoad 2s ease 0s 1 normal backwards;"
+                onclick="location.href='../notepad/notepad.html'">Notepad
+                <img class="buttonIMG" style="animation: riseLoad 2s ease 0s 1 normal backwards;"
+                    src="../images/notepad.png"></img>
             </button>
-            <button class="bigCentered" onclick="location.href='../calculator/calculator.html'">Calculator
-                <img class="buttonIMG" src="../images/calculator.png"></img>
+            <button class="bigCentered" style="animation: riseLoad 3s ease 0s 1 normal backwards;"
+                onclick="location.href='../calculator/calculator.html'">Calculator
+                <img class="buttonIMG" style="animation: riseLoad 2s ease 0s 1 normal backwards;"
+                    src="../images/calculator.png"></img>
             </button>
         </div>
         <div class="horizontalLayout">
             <button class="bigCentered" onclick="alert('Coding in progress...')">Flashcard Maker
-                <img class="buttonIMG" src="../images/flashcards.png"></img>
+                <img class="buttonIMG" style="animation: riseLoad 2s ease 0s 1 normal backwards;"
+                    src="../images/flashcards.png"></img>
             </button>
-            <button class="bigCentered" onclick="alert('Coding in progress...')">Citation Generator
-                <img class="buttonIMG" src="../images/citations.png"></img>
+            <button class="bigCentered" style="animation: riseLoad 2s ease 0s 1 normal backwards;"
+                onclick="alert('Coding in progress...')">Citation Generator
+                <img class="buttonIMG" style="animation: riseLoad 2s ease 0s 1 normal backwards;"
+                    src="../images/citations.png"></img>
             </button>
-            <button class="bigCentered" onclick="alert('Coding in progress...')">Launcher
-                <img class="buttonIMG" src="../images/tools.png"></img>
+            <button class="bigCentered" style="animation: riseLoad 3s ease 0s 1 normal backwards;"
+                onclick="alert('Coding in progress...')">Launcher
+                <img class="buttonIMG" style="animation: riseLoad 2s ease 0s 1 normal backwards;"
+                    src="../images/tools.png"></img>
             </button>
         </div>
     </div>
@@ -39,16 +63,29 @@
     <div class="blurBox onTop"
         style="height: calc(28.75vh - 50px); width: 68.75vw; right: 0; top: calc(71.5vh - 20px);">
         <div class="horizontalLayout">
-            <div class="timerCircle" style="border: 8px solid var(--vibrantBlueBG);">
-                <div class="timerCircle" style="background-color: var(--blueBG); position: absolute;" id="timerCircle">
-                </div>
+            <div class="timerCircleOutline">
+                <div class="timerCircle" id="timerCircle"></div>
                 <p id="timerText" style="font-size: calc(1.25vw + 2.2vh); z-index: 3;">25:00</p>
                 <p id="timerDetail" style="font-size: calc(0.625vw + 1.1vh); z-index: 3;">Time to Work!</p>
             </div>
 
             <div class="verticalLayout" style="margin: 0; margin-left: 100px;">
-                <div class="title horizontalCenter" style="margin: auto;">
-                    Pomodoro Timer</div>
+                <div class="horizontalLayout" style="column-gap: 0;">
+                    <div class="title">P</div>
+                    <div class="title" style="animation: riseLoad 2s ease 0s 1 normal backwards;">o</div>
+                    <div class="title" style="animation: riseLoad 3s ease 0s 1 normal backwards;">m</div>
+                    <div class="title" style="animation: riseLoad 4s ease 0s 1 normal backwards;">o</div>
+                    <div class="title" style="animation: riseLoad 4.25s ease 0s 1 normal backwards;">d</div>
+                    <div class="title" style="animation: riseLoad 4.5s ease 0s 1 normal backwards;">o</div>
+                    <div class="title" style="animation: riseLoad 4.75s ease 0s 1 normal backwards;">r</div>
+                    <div class="title" style="animation: riseLoad 5s ease 0s 1 normal backwards; margin-right: 15px;">
+                        o</div>
+                    <div class="title" style="animation: riseLoad 2s ease 0s 1 normal backwards;">T</div>
+                    <div class="title" style="animation: riseLoad 3s ease 0s 1 normal backwards;">i</div>
+                    <div class="title" style="animation: riseLoad 4s ease 0s 1 normal backwards;">m</div>
+                    <div class="title" style="animation: riseLoad 4.25s ease 0s 1 normal backwards;">e</div>
+                    <div class="title" style="animation: riseLoad 4.5s ease 0s 1 normal backwards;">r</div>
+                </div>
                 <div class="horizontalLayout" style="margin: auto; justify-content: space-evenly;">
                     <button class="start" id="timerStart" onclick="timerStart()">Start</button>
                     <button class="stop" id="timerStop" onclick="timerStop()">Stop</button>
@@ -65,7 +102,7 @@
             onMouseOver="this.style.boxShadow='0px 6px 20px 0px rgba(0,0,0,0.15)'; this.style.transform = 'translateY(-2px)'; this.style.transition = 'transform 300ms ease'"
             onMouseOut="this.style.boxShadow='none'; this.style.transform = 'translateY(0px)';"
             style="border:1px solid rgba(0, 0, 0, 0);transition:.3s;border-radius:4px;" frameBorder="0"></iframe>
-        <p>Note: This is a free demo, try not to use it much and waste my credits :)</p>
+        <p>Note: This is a free demo, try not to use it much and waste my credits.</p>
     </div>
 
     <div class="blurBox onTop"
