--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
     <div class="horizontalLayout">
       <div class="bullet" onclick="location.href='projects.html'">projects</div>
       <div class="blankBullet">•</div>
-      <div class="bullet">about (coming soon)</div>
+      <div class="bullet" id="about" onclick="comingSoon()">about</div>
     </div>
+    <div class="blankBullet" id="hint">try: hovering over all of rishaan</div>
   </div>
 </body>
 
