--- a/projects.html
+++ b/projects.html
@@ -100,7 +100,7 @@
 
       <!-- fuseLearn -->
       <div class="verticalLayout projectLayout" style="animation: riseLoad 6s ease 0s 1 normal backwards;">
-        <img class="projectIMG" src="images/broken-robot.png">
+        <img class="projectIMG" src="images/fuseLearn.png">
         <div class="projectTitle">fuseLearn</div>
         <div class="projectDetail">learning hub full of tools</div>
         <button class="basic" onclick="location.href='https://foresthacks.devpost.com'">
