--- a/projects.html
+++ b/projects.html
@@ -125,7 +125,7 @@
           <img class="buttonIMG" src="images/replit.png">James Replit
         </button>
         <button class="github" onclick="location.href='https://github.com/rishaank'">
-          <img class="buttonIMG" src="images/github-icon.png">Github
+          <img class="buttonIMG" src="images/github-icon.png">Rishaan Github
         </button>
       </div>
     </div>
