fix broken replit run links

--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
         <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Clickity-Calculator'">
           <img class="buttonIMG" src="images/replit.png">Replit
         </button>
-        <button class="basic" onclick="location.href='replit/Calculator/index.html'">
+        <button class="basic" onclick="location.href='Replit/Calculator/index.html'">
           <img class="buttonIMG" src="images/play.png">run
         </button>
         <div class="postDetail">school group project</div>
@@ -49,7 +49,7 @@
         <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Jeopardy?v=1'">
           <img class="buttonIMG" src="images/replit.png">Replit
         </button>
-        <button class="basic" onclick="location.href='replit/Jeopardy/index.html'">
+        <button class="basic" onclick="location.href='Replit/Jeopardy/index.html'">
           <img class="buttonIMG" src="images/play.png">run
         </button>
         <div class="postDetail">school group project</div>
@@ -63,7 +63,7 @@
         <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Lets-Cut-the-Steak'">
           <img class="buttonIMG" src="images/replit.png">Replit
         </button>
-        <button class="basic" onclick="location.href='replit/Steak/index.html'">
+        <button class="basic" onclick="location.href='Replit/Steak/index.html'">
           <img class="buttonIMG" src="images/play.png">run
         </button>
         <div class="postDetail">school group project</div>
@@ -77,7 +77,7 @@
         <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Tesla-Website?v=1'">
           <img class="buttonIMG" src="images/replit.png">Replit
         </button>
-        <button class="basic" onclick="location.href='replit/Tesla/index.html'">
+        <button class="basic" onclick="location.href='Replit/Tesla/index.html'">
           <img class="buttonIMG" src="images/play.png">run
         </button>
         <div class="postDetail">school group project</div>
@@ -91,7 +91,7 @@
         <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Tesla-Website?v=1'">
           <img class="buttonIMG" src="images/replit.png">Replit
         </button>
-        <button class="basic" onclick="location.href='replit/Tesla/index.html'">
+        <button class="basic" onclick="location.href='Replit/Tesla/index.html'">
           <img class="buttonIMG" src="images/play.png">run
         </button>
         <div class="postDetail">school group project</div>
