--- a/hackathons/fuseLearn/calculator/calculator.html
+++ b/hackathons/fuseLearn/calculator/calculator.html
@@ -6,6 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculator</title>
   <link rel="stylesheet" type="text/css" href="calculator.css">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="../images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png">
+  <link rel="manifest" href="../images/site.webmanifest">
+  <link rel="mask-icon" href="../images/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="../images/favicon.ico">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="../images/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -24,7 +34,8 @@
       <div class="title" style="animation: riseLoad 5s ease 0s 1 normal backwards;">o</div>
       <div class="title" style="animation: riseLoad 5s ease 0s 1 normal backwards;">r</div>
     </div>
-
+    <div class="subTitle">Keyboard Navigation Compatible | History is not saved | Scientific Mode may come in the future
+    </div>
     <div class="horizontalLayout">
       <!-- Left Panel -->
       <div>
