--- a/hackathons/fuseLearn/tasks/tasks.html
+++ b/hackathons/fuseLearn/tasks/tasks.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" type="text/css" href="tasks.css">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasks</title>
+    <link rel="stylesheet" type="text/css" href="tasks.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="../images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png">
+    <link rel="manifest" href="../images/site.webmanifest">
+    <link rel="mask-icon" href="../images/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="../images/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="../images/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -20,7 +30,7 @@
             <div class="title" style="animation: riseLoad 4s ease 0s 1 normal backwards;">k</div>
             <div class="title" style="animation: riseLoad 4.25s ease 0s 1 normal backwards;">s</div>
         </div>
-        <div class="subTitle" style="margin-top: 0; animation: riseLoad 1.5s ease 0s 1 normal backwards;">Click a task
+        <div class="subTitle">Click a task
             to toggle completion, double click to delete it.</div>
 
         <div class="horizontalLayout" style="column-gap: 20px; animation: riseLoad 2s ease 0s 1 normal backwards;">
