flashcard maker + flashcard reviewer + some minor changes

--- a/hackathons/fuseLearn/home/fuseLearn.html
+++ b/hackathons/fuseLearn/home/fuseLearn.html
@@ -53,7 +53,7 @@
             </button>
         </div>
         <div class="horizontalLayout">
-            <button class="bigCentered" onclick="alert('Coding in progress...')">Flashcard Maker
+            <button class="bigCentered" onclick="location.href='../flashcards/flashcards.html'">Flashcard Maker
                 <img class="buttonIMG" style="animation: riseLoad 2s ease 0s 1 normal backwards;"
                     src="../images/flashcards.png"></img>
             </button>
