--- a/hackathons/fuseLearn/tasks/tasks.html
+++ b/hackathons/fuseLearn/tasks/tasks.html
@@ -51,7 +51,7 @@
 
         <div class="info" id="info">
             <img class="info" src="../images/info.png">
-            <p>You have no more tasks</p>
+            <p style="font-size: calc(0.625vw + 1.1vh);">You have no more tasks</p>
         </div>
 
         <p>Icons from https://icons8.com/</p>
