Flashcard score + Correct QA on incorrect + bug fixes

--- a/hackathons/fuseLearn/flashcards/flashcards.html
+++ b/hackathons/fuseLearn/flashcards/flashcards.html
@@ -32,8 +32,13 @@
             <div class="title" style="animation: riseLoad 4.5s ease 0s 1 normal backwards;">c</div>
             <div class="title" style="animation: riseLoad 4.75s ease 0s 1 normal backwards;">a</div>
             <div class="title" style="animation: riseLoad 5s ease 0s 1 normal backwards;">r</div>
-            <div class="title" style="animation: riseLoad 5s ease 0s 1 normal backwards;">d</div>
-            <div class="title" style="animation: riseLoad 5s ease 0s 1 normal backwards;">s</div>
+            <div class="title" style="animation: riseLoad 5.25s ease 0s 1 normal backwards; margin-right: 15px;">
+                d</div>
+            <div class="title" style="animation: riseLoad 2s ease 0s 1 normal backwards;">M</div>
+            <div class="title" style="animation: riseLoad 3s ease 0s 1 normal backwards;">a</div>
+            <div class="title" style="animation: riseLoad 4s ease 0s 1 normal backwards;">k</div>
+            <div class="title" style="animation: riseLoad 4.25s ease 0s 1 normal backwards;">e</div>
+            <div class="title" style="animation: riseLoad 4.5s ease 0s 1 normal backwards;">r</div>
         </div>
         <div class="subTitle">Click a card
             to toggle visibility, double click to delete it.</div>
@@ -47,7 +52,7 @@
             <button class="add" id="add-button">Add Card</button>
             <button class="clearHidden" id="clear-hidden-button">Clear Hidden</button>
             <button class="empty" id="empty-button">Delete Cards</button>
-            <button class="review" onclick="location.href='./reviewMode/review.html'">Review</button>
+            <button class="review" id="review-button">Review</button>
         </div>
 
         <br />
