--- a/hackathons/fuseLearn/flashcards/reviewMode/review.html
+++ b/hackathons/fuseLearn/flashcards/reviewMode/review.html
@@ -67,6 +67,9 @@
             <img class="correct" id="correct-sign" src="../../images/check.png">
             <p class="correct" id="correct-text">Correct</p>
 
+            <p class="correct" style="margin-bottom: calc(32vh - (1.425vw + 1.9vh) - (4.392vw + 8.351vh));"
+                id="incorrect-card-text"></p>
+
             <button class="nextQuestion" id="next-question-button">Next Question</button>
         </div>
     </div>
