created notepad file system + minor changes

--- a/hackathons/fuseLearn/home/fuseLearn.html
+++ b/hackathons/fuseLearn/home/fuseLearn.html
@@ -42,7 +42,7 @@
                     src="../images/tasks.png"></img>
             </button>
             <button class="bigCentered" style="animation: riseLoad 2s ease 0s 1 normal backwards;"
-                onclick="location.href='../notepad/notepad.html'">Notepad
+                onclick="location.href='../notepad/notepadFiles/notepadFiles.html'">Notepad
                 <img class="buttonIMG" style="animation: riseLoad 2s ease 0s 1 normal backwards;"
                     src="../images/notepad.png"></img>
             </button>
