--- a/hackathons/fuseLearn/notepad/notepad.html
+++ b/hackathons/fuseLearn/notepad/notepad.html
@@ -21,7 +21,7 @@
 <body>
     <img class="bgIMG" src="../images/mountainBG.jpg">
     <img class="back" style="animation: riseLoad 2s ease 0s 1 normal backwards;" src="../images/back.png" alt="Back"
-        onclick="location.href='../home/fuseLearn.html'">
+        onclick="location.href='./notepadFiles/notepadFiles.html'">
     <div class="blurBox onTop"
         style="width: 100vw; height: 100vh; left: 0; top: 0; margin: 0; border-radius: 0; box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);">
         <div class="horizontalLayout" style="column-gap: 0; margin: 0;">
